we should emit op_watchdog after op_enter https://bugs.webkit.org/show_bug.cgi?id=151972

Reviewed by Mark Lam.

This also solves the issue of watchdog not being
observed when we loop purely through tail calls.

* API/tests/ExecutionTimeLimitTest.cpp:
(testExecutionTimeLimit):
* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::BytecodeGenerator):
(JSC::BytecodeGenerator::emitProfiledOpcode):
(JSC::BytecodeGenerator::emitEnter):
(JSC::BytecodeGenerator::emitLoopHint):
* bytecompiler/BytecodeGenerator.h:



Canonical link: https://commits.webkit.org/170215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193842 268f45cc-cd09-0410-ab3c-d52691b4dbfc