Source/JavaScriptCore/bytecompiler/BytecodeGenerator.h
@@ -600,6 +600,7 @@ namespace JSC {
         PassRefPtr<Label> emitJumpIfNotFunctionApply(RegisterID* cond, Label* target);
         void emitPopScopes(RegisterID* srcDst, int targetScopeDepth);
 
+        void emitEnter();
         void emitWatchdog();
 
         RegisterID* emitHasIndexedProperty(RegisterID* dst, RegisterID* base, RegisterID* propertyName);
